# aws-agentcore-handson

./: .gitignore  Dockerfile  README.md  access_codeinterprete.py  agent_call.py  agentcore_strands1.py  agentcore_strands_simple.py  agentcore_strands_simple_config.json  check_bedrock.py  client_requests.py  create_event.py  create_memory.py  list_memory.py  mcp_client2.py  mcp_client3.py  requirements.txt  simpleaccess_codeinterpreter.py  weather_agent.py
agents/: agent_longterm.py  agentcore_server1.py  agentcore_server2.py  agentcore_strands1.py  agentcore_strands_simple.py  langgraph_agent.py  langgraph_agent_app.py
crew_app/: README.md  pyproject.toml
crew_app/src/crew_app/: crew.py  main.py  run_travel_crew.py  travel_report.md  travel_report_crew.py
crew_app/src/crew_app/tools/: custom_tool.py
mcp/: mcp-server.py  mcp_client.py
memory/: create_event2.py  create_event3.py  prompt.txt
policies/: s3vectors-create-bucket-policy.json
scripts/: access_longterm_agent.py  agent_call.py  client_requests.py
